Unreleased Changes
==================
- N/A

2.1.0 (2009-05-04)
==================
- Fixed DYNPROXY-87: "Mixin takes precedence over target object"
  changed DP to throw exceptions when two mixins implement the same interface or a mixin implements the same interface as its target class/object

- Applied Krzysztof Kozmic's patch improving the XML documentation of IInterceptorSelector
  and IProxyGenerationHook.

2.1.0 RC1 (2009-03-10)
======================
- Applied Krzysztof Kozmic's patch improving the XML documentation and parameter names of IProxyBuilder, DefaultProxyBuilder and ProxyGenerator.

- Applied Krzysztof Kozmic's patch heavily improving the XML documentation of ProxyGenerator.

- Fixed DYNPROXY-ISSUE-84: "UseSingleInterfaceProxy on ProxyGenerationOptions is never used and should be removed"

- Fixed DYNPROXY-ISSUE-58/DYNPROXY-ISSUE-77: "Inherited interface seems not to work"
  using Dimitri Goethals' test case and Ayende Rahien/Andrey Shchekin's patch.

- Fixed DYNPROXY-ISSUE-52: "DynamicProxy 1.1.5 doesn't work on Medium Trust"
  uses the assembly's fullname instead of calling GetName()

- Fixed DYNPROXY-ISSUE-82: "Not allow generics & NoGeneric methods with same signature"
  using Fabio Maulo's test case and Krzysztof Kozmic patch.

- Applied Neil Bourgeois's patch fixing DYNPROXY-ISSUE-78
  "Custom attributes of virtual properties absent on proxy"

- Applied Craig Vermeer's patch fixing an issue with generating default constructors for DYNPROXY-ISSUE-81
  "No Default Constructor in generated Class Proxy"

- Added support for IInterceptorSelector (patch provided by Krzysztof Kozmic).
- Removed ProxyGenerationOptions.UseSelector.

- Added support for generic methods when specifying additional interfaces to CreateInterfaceProxyWithoutTarget (reported by Craig Neuwirth, cause
  found by Krzysztof Kozmic)

- Added support for provide additional interfaces for target interface proxies.
